# MetaCC

./: .gitignore  CMakeLists.txt  Makefile  SVObject.jj  ast.c  ast.cpp  ast.cpp.origin  ast.h  ast.hpp  ast_action.cpp  ast_common.cpp  ast_describe.cpp  ast_glance.cpp  ast_javacc.hpp  ast_javacc_action.cpp  ast_javacc_common.cpp  ast_javacc_describe.cpp  ast_lyc.hpp  ast_lyc_action.cpp  ast_lyc_common.cpp  ast_lyc_describe.cpp  ast_lyc_glance.cpp  ast_lyc_main.cpp  ast_lycpp.hpp  ast_lycpp_action.cpp  cmake_install.cmake  lex.yy.c  log.txt  main.c  main.cpp  main.l  main.y  mcc_parser.yy  metacc  out  sv_lexer.l  sv_parser.yy  symbols.list  symbols_expr_only.list  y.dot  (+3 more)
Makefiles/: prev
_dep/build-mcc-Desktop-Debug/: Makefile  mcc_lexer.cpp  mcc_parser.tab.cc  mcc_parser.tab.hh
_dep/build-metacc/: CTestTestfile.cmake  cmake_install.cmake  mcc_parser.tab.hh  mcc_parser.yy.cc
_dep/build-metacc-dev1/: mcc_parser.tab.hh
build-metacc/: CMakeCache.txt  Makefile  mcc_parser.tab.cc  metacc
build-metacc-dev1/list/: sv_expr.list
calc_v1/after/: after_token.y
calc_v1_v0.6.0.0/after/: after_tokendef.l
correct/: ast_common.cpp  ast_describe.cpp  log.txt
enumerator/: Makefile  input.txt  log.txt
enumerator/build-enumerator-Desktop-Debug/: Makefile
enumerator/debug/: Makefile  enumerator
enumerator/enumerator/: Tree.cpp  Tree.hpp  enumerator.pro  enumerator.pro.user.118e6a1  main.cpp  main_v1.cpp_  objective.txt  out  output.txt
enumerator_latest/enumerator/: answer.txt  enumerator.pro
etc/: ast_javacc_glance.cpp  ast_javacc_main.cpp  ast_lycpp_common.cpp  ast_lycpp_describe.cpp  ast_lycpp_glance.cpp
list/: symbols_v12.list  symbols_v14.list  symbols_v18.list  symbols_v2.list  symbols_v20.list  symbols_v22.list  symbols_v23.list
metacc/: LICENSE  ast_action.cpp  ast_describe.cpp
metacc/Makefiles/: Makefile_origin
metacc/build-metacc-Desktop-Debug/: CTestTestfile.cmake  Makefile  mcc_parser.yy.cc  metacc
metacc/debug/: metacc  (+8 more)
metacc_latest/: mcc_lexer.l
origin/: ast.h  ast_common.cpp
(+114 files in other folders)
